# gnome-control-center

./: configure.ac
panels/: Makefile.am
panels/connman/: Makefile.am  cc-network-panel.c  cc-network-panel.h  connection-editor.ui  net-connection-editor.c  net-tethering.c  net-tethering.h  network.gresource.xml  network.ui  tethering.ui
panels/connman/connection-editor/: Makefile.am  connection-editor.gresource.xml  connection-editor.ui  net-connection-editor.c  net-connection-editor.h
panels/connman/icons/: Makefile.am
panels/connman/icons/16x16/: Makefile.am
panels/connman/icons/22x22/: Makefile.am
panels/connman/icons/24x24/: Makefile.am
panels/connman/icons/32x32/: Makefile.am
panels/connman/icons/48x48/: Makefile.am
panels/connman/icons/64x64/: Makefile.am
panels/connman/icons/scalable/: Makefile.am
shell/: Makefile.am
