themedir = $(datadir)/icons/hicolor
size = 64x64
context = apps

iconsdir = $(themedir)/$(size)/$(context)

icons_DATA = 	connman_bt.png \
		connman_cell.png \
		connman_conn.png \
		connman_corporate.png \
		connman_eth.png \
		connman_hotspot.png \
		connman_noconn.png \
		connman_offline.png \
		connman_online.png \
		connman_security.png \
		connman_settings.png \
		connman_tick.png \
		connman_wifi.png

EXTRA_DIST =		\
	$(icons_DATA)

-include $(top_srcdir)/git.mk
