themedir = $(datadir)/icons/hicolor
size = scalable
context = apps

iconsdir = $(themedir)/$(size)/$(context)

icons_DATA = 	connman_bt.svg \
		connman_cell.svg \
		connman_conn.svg \
		connman_corporate.svg \
		connman_eth.svg \
		connman_hotspot.svg \
		connman_noconn.svg \
		connman_offline.svg \
		connman_online.svg \
		connman_security.svg \
		connman_settings.svg \
		connman_tick.svg \
		connman_wifi.svg

EXTRA_DIST =				\
	$(icons_DATA)			\
	$(appicons_DATA)

-include $(top_srcdir)/git.mk
